# python-pkgbuilder

./: CHANGELOG.md  Makefile  README.md  pkgbuild.yaml  pyproject.toml
.github/workflows/: download-and-run.yml  release.yml
pkgbuilder/: __main__.py
