[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pkgbuilder"
version = "2024.5.13"
requires-python = ">= 3.10"
license-files = { paths = ["LICENSE"] }
authors = [
  { name="Refolli Francesco", email="francesco.refolli@gmail.com" }
]
maintainers = [
  { name="Refolli Francesco", email="francesco.refolli@gmail.com" }
]
description = "Declarative PKGBUILD automatic generation"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "yaml"
]

[project.urls]
Repository = "https://github.com/frefolli/pkgbuilder"

[project.scripts]
pkgbuilder-cli = "pkgbuilder.__main__:main_cli"

[tool.hatch.build]
include = [
  "pkgbuilder/*.py"
]
